--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,5 +1,5 @@
-baseURL = 'http://blog.kagamino.dev/'
-copyright = "{year}"                  # To make 2007 - 2022. Just add before {year} example: 2007 - {year}
+baseURL = 'https://blog.kagamino.dev/'
+copyright = "{year}"                   # To make 2007 - 2022. Just add before {year} example: 2007 - {year}
 languageCode = 'en-us'
 theme = 'lowkey'
 title = "Kagamino's Blog"
