--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -10,11 +10,12 @@ summaryLength = 15
 paginate = 5
 
 [markup.highlight]
-codeFences = false
+codeFences = true
 guessSyntax = false
 hl_Lines = ""
 lineNoStart = 1
 lineNos = false
 lineNumbersInTable = false
 tabWidth = 4
-noClasses = false
+noClasses = true
+style = "monokai"
